--- a/ml_geo_mac.yml
+++ b/ml_geo_mac.yml
@@ -232,6 +232,9 @@ dependencies:
 - tbb=4.3_20141023=0
 - pytorch=0.2.0=py35_4cu75
 - torchvision=0.1.9=py35_1
-- cython
-- gdal
-- simplejson
+- cython=0.28.3
+- gdal=2.2.4
+- libgdal=2.3.0
+- simplejson=3.15.0
+- ffmpeg=3.1.3
+- shapely=1.6.4
