--- a/data_science_env/py_scientific_base.yml
+++ b/data_science_env/py_scientific_base.yml
@@ -1,4 +1,5 @@
 name: DS
+
 channels:
   - menpo
   - anaconda
@@ -6,6 +7,7 @@ channels:
   - defaults
   
 dependencies:
+  - python=3.7.1
   - sympy
   - cython
   - matplotlib
@@ -22,7 +24,6 @@ dependencies:
   - scipy
   - ffmpeg
   - opencv
-  - slycot
 
   - pip:
     - filterpy
