openfoam 2.4.0 with LEMOS

--- a/docker_resources/openfoam240/Dockerfile
+++ b/docker_resources/openfoam240/Dockerfile
@@ -1,11 +1,12 @@
-FROM ubuntu:18.04
+FROM ubuntu:16.04
 
 LABEL maintainer="Ali Tohidi ali@oneconcern.com"
 
 USER root
 
 # installing OS essentials
-RUN apt-get update && apt-get install -yq curl make vim nano \
+RUN apt-get update \
+    && apt-get install -yq curl make vim nano \
     && apt-get install -yq --no-install-recommends \
     gcc \
     wget \
@@ -14,38 +15,17 @@ RUN apt-get update && apt-get install -yq curl make vim nano \
     sudo \
     locales \
     fonts-liberation \
-    build-essential \
-    cmake \
-    flex \
-    bison \
-    zlib1g-dev \ 
-    qt4-dev-tools \ 
-    libqt4-dev \
-    libqtwebkit-dev \ 
-    gnuplot \
-    libreadline-dev \ 
-    libncurses5-dev \
-    libxt-dev \
-    libopenmpi-dev \
-    openmpi-bin \
-    libboost-system-dev \
-    libboost-thread-dev \
-    libgmp-dev \
-    libmpfr-dev \
-    python \
-    python-dev \ 
-    libcgal-dev \
-    libgsl-dev \
-    build-essential \
-    unzip 
+    unzip \
+    g++ \
+    # required by openfoam
+    && apt-get install -yq git-core build-essential cmake flex bison zlib1g-dev qt4-dev-tools libqt4-dev libqtwebkit-dev gnuplot \
+    libreadline-dev libncurses5-dev libxt-dev libopenmpi-dev openmpi-bin libboost-system-dev libboost-thread-dev libgmp-dev \
+    libmpfr-dev python python-dev libcgal-dev unzip libglu1-mesa-dev libqt4-opengl-dev libgsl-dev
 
 
 RUN apt-get -yq dist-upgrade \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
-
-# making sure paraview and CGAL work
-RUN apt-get update && apt-get install -yq libglu1-mesa-dev libqt4-opengl-dev
 
 # use unicode
 RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
@@ -76,12 +56,12 @@ RUN chmod a+x make_openfoam240.sh \
     && pwd && ls -ltr \
     && ./make_openfoam240.sh
 
-# # installing LEMOS
-# ADD ./make_lemos.sh ${HOME}/
-# COPY ./LEMOS-2.4.x-master.zip ${HOME}/
-# WORKDIR ${HOME}
-# RUN chmod a+x ./make_lemos.sh \
-#     && ./make_lemos.sh
+# installing LEMOS
+ADD ./make_lemos.sh ${HOME}/
+COPY ./LEMOS-2.4.x-master.zip ${HOME}/
+WORKDIR ${HOME}
+RUN chmod a+x ./make_lemos.sh \
+    && ./make_lemos.sh
 
 WORKDIR ${HOME}
 EXPOSE 7777 8888 52698
